# molecule_benchmarks

./: .gitignore  .readthedocs.yaml  caching_example.py  caching_optional_example.py  pyproject.toml  test_cache.py  test_cache_validation.py  test_different_datasets.py
.github/workflows/: docs.yml
docs/: requirements.txt
docs/source/: contributing.rst  datasets.rst  installation.rst
molecule_benchmarks/: __init__.py  benchmarker.py  dataset.py  model.py  moses_metrics.py
molecule_benchmarks/resources/: wehi_pains.csv
tests/: test_benchmarker.py  test_moses.py
