[project]
name = "molecule-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ole Petersen", email = "peteole2707@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fcd>=1.2.2",
    "rdkit>=2025.3.3",
    "rdkit-stubs>=0.8",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[project.scripts]
molecule-benchmarks = "molecule_benchmarks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "types-requests>=2.32.4.20250611",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"
python_files = ["test_*.py"]
